infrastructure/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/mostafaahmed-eng/ecommerce-deploy/backend:latest
        ports:
        - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ecommerce
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: backend
