infrastructure/k8s/payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: ghcr.io/mostafaahmed-eng/ecommerce-deploy/payment:latest
        ports:
        - containerPort: 4200

---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: ecommerce
spec:
  type: ClusterIP
  ports:
  - port: 4200
    targetPort: 4200
  selector:
    app: payment
