infrastructure/k8s/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: ghcr.io/mostafaahmed-eng/ecommerce-deploy/search:latest
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: ecommerce
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: search
